<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/name"

        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        android:hint="@string/name_hint"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/surname"

        app:layout_constraintRight_toLeftOf="@id/patronymic"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Andreevich,Андреевич"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/surname"

        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:hint="@string/surname_hint"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/name"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Павел,Pavel"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/patronymic"

        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:hint="@string/patronymic_hint"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Andreevich,Андреевич"
        android:inputType="textPersonName" />

</androidx.constraintlayout.widget.ConstraintLayout>