<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"

        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        android:text="@string/name"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/surname"
        app:layout_constraintRight_toLeftOf="@id/patronymic"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surname"

        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/surname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/patronymic"

        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:text="@string/patronymic"

        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintLeft_toRightOf="@id/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>